@@ -44,7 +44,7 @@ public abstract class GraphsView extends ViewPart {
 	/**
 	 * This class provides the framework for traversing the view's Tree structure.
 	 */
-	private class ViewContentProvider implements IStructuredContentProvider, ITreeContentProvider {
+	private static class ViewContentProvider implements IStructuredContentProvider, ITreeContentProvider {
 		public void inputChanged(Viewer v, Object oldInput, Object newInput) {}
 		
 		public void dispose() {}
@@ -78,7 +78,7 @@ public abstract class GraphsView extends ViewPart {
 	 * This class provides functionality for determining what image to
 	 * display for each item in the tree.
 	 */
-	private class ViewLabelProvider extends LabelProvider {
+	private static class ViewLabelProvider extends LabelProvider {
 		public String getText(Object obj) {
 			return obj.toString();
 		}
