@@ -3,6 +3,3 @@ OpenFileAction.FileIsNull=File is null
 OpenFileAction.Problem=Problem
 OpenFileAction.OpenFile=Open File
 NewFileAction.NewFile=New File
-
-SimpleDocumentProvider.errorCreatingFile=Error when saving file
-SimpleDocumentProvider.incorrectURL=Incorrect URL
