@@ -18,25 +18,23 @@ import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.Writer;
-import java.net.MalformedURLException;
 
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
+
 import org.eclipse.jface.operation.IRunnableContext;
+
 import org.eclipse.jface.text.Document;
 import org.eclipse.jface.text.IDocument;
 import org.eclipse.jface.text.source.IAnnotationModel;
-import org.eclipse.linuxtools.internal.systemtap.ui.editor.EditorPlugin;
-import org.eclipse.linuxtools.internal.systemtap.ui.editor.Localization;
+
 import org.eclipse.ui.IEditorInput;
 import org.eclipse.ui.IPathEditorInput;
-import org.eclipse.ui.ide.FileStoreEditorInput;
 import org.eclipse.ui.texteditor.AbstractDocumentProvider;
 
 public class SimpleDocumentProvider extends AbstractDocumentProvider {
@@ -67,29 +65,23 @@ public class SimpleDocumentProvider extends AbstractDocumentProvider {
 	 * @throws CoreException if reading the file fails
 	 */
 	private boolean setDocumentContent(IDocument document, IEditorInput input) throws CoreException {
-		Reader reader = null;
+		Reader reader;
 		try {
-			if (input instanceof FileStoreEditorInput){
-				reader = new InputStreamReader(((FileStoreEditorInput)input).getURI().toURL().openStream());
-			} else if (input instanceof IPathEditorInput){
+			if (input instanceof IPathEditorInput)
 				reader= new FileReader(((IPathEditorInput)input).getPath().toFile());
-			} else {
+			else {
 				return false;
 			}
 		} catch (FileNotFoundException e) {
 			// return empty document and save later
 			return true;
-		} catch (MalformedURLException e) {
-			throw new CoreException(new Status(IStatus.ERROR, EditorPlugin.ID ,Localization.getString("SimpleDocumentProvider.incorrectURL"), e)); //$NON-NLS-1$ //$NON-NLS-2$
-		} catch (IOException e) {
-			throw new CoreException(new Status(IStatus.ERROR, EditorPlugin.ID, Localization.getString("SimpleDocumentProvider.errorCreatingFile"), e)); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 		
 		try {
 			setDocumentContent(document, reader);
 			return true;
 		} catch (IOException e) {
-			throw new CoreException(new Status(IStatus.ERROR, EditorPlugin.ID, IStatus.OK, Localization.getString("SimpleDocumentProvider.errorCreatingFile"), e)); //$NON-NLS-1$ //$NON-NLS-2$
+			throw new CoreException(new Status(IStatus.ERROR, "org.eclipse.linuxtools.systemtap.ui.editor", IStatus.OK, "error reading file", e)); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 	}
 
@@ -150,11 +142,11 @@ public class SimpleDocumentProvider extends AbstractDocumentProvider {
 						Writer writer= new FileWriter(file);
 						writeDocumentContent(document, writer, monitor);
 					} else
-						throw new CoreException(new Status(IStatus.ERROR, EditorPlugin.ID, IStatus.OK, "file is read-only", null)); //$NON-NLS-1$ //$NON-NLS-2$
+						throw new CoreException(new Status(IStatus.ERROR, "org.eclipse.linuxtools.systemtap.ui.editor", IStatus.OK, "file is read-only", null)); //$NON-NLS-1$ //$NON-NLS-2$
 				} else
-					throw new CoreException(new Status(IStatus.ERROR, EditorPlugin.ID, IStatus.OK, "error creating file", null)); //$NON-NLS-1$ //$NON-NLS-2$
+					throw new CoreException(new Status(IStatus.ERROR, "org.eclipse.linuxtools.systemtap.ui.editor", IStatus.OK, "error creating file", null)); //$NON-NLS-1$ //$NON-NLS-2$
 			} catch (IOException e) {
-				throw new CoreException(new Status(IStatus.ERROR, EditorPlugin.ID, IStatus.OK, Localization.getString("errorCreatingFile"), e)); //$NON-NLS-1$ //$NON-NLS-2$
+				throw new CoreException(new Status(IStatus.ERROR, "org.eclipse.linuxtools.systemtap.ui.editor", IStatus.OK, "error when saving file", e)); //$NON-NLS-1$ //$NON-NLS-2$
 			}
 		}
 	}
